# cmd/doc/openapi.yaml
@@ -29,83 +29,6 @@ info:
   version: 1.0.0
 openapi: 3.0.3
 paths:
-  /accounts:
-    get:
-      operationId: get_accounts
-      responses:
-        "200":
-          description: OK
-        "400":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
-          description: Bad Request
-        "401":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
-          description: Unauthorized
-        "403":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
-          description: Forbidden
-        "404":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
-          description: Not Found
-        "500":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
-          description: Internal Server Error
-      summary: List Accounts
-      tags:
-      - accounts
-    post:
-      operationId: post_accounts
-      responses:
-        "200":
-          description: OK
-        "400":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
-          description: Bad Request
-        "401":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
-          description: Unauthorized
-        "403":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
-          description: Forbidden
-        "404":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
-          description: Not Found
-        "500":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
-          description: Internal Server Error
-      summary: Create Accounts
-      tags:
-      - accounts
   /analytics:
     get:
       operationId: get_analytics
@@ -1363,7 +1286,6 @@ servers:
 - description: Default
   url: http://localhost
 tags:
-- name: accounts
 - name: analytics
 - name: auth
 - name: automation
